package com.loosemole;
import dk.sdu.mmmi.cbse.common.data.Entity;

public class Enemy extends Entity {

}
